Add and include some function

--- a/testProjectV1.1/testProjectV1.1.vcxproj.filters
+++ b/testProjectV1.1/testProjectV1.1.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="testProjectV1.1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="sum.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="one.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
