--- a/testProjectV1.1/testProjectV1.1.vcxproj
+++ b/testProjectV1.1/testProjectV1.1.vcxproj
@@ -127,7 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="sum.cpp" />
     <ClCompile Include="testProjectV1.1.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="one.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
