--- a/testProjectV1.1/testProjectV1.1.vcxproj.filters
+++ b/testProjectV1.1/testProjectV1.1.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="sum.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
+    <ClCompile Include="prod.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="one.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="prod.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
